deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-svc
  namespace: capstone
spec:
  selector: { app: web }
  ports:
    - port: 80
      targetPort: 8501
  type: ClusterIP
