deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  namespace: capstone
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/appgw-ssl-certificate: capstone-tls
spec:
  tls:
    - hosts: [ yourapp.contoso.com ]
      secretName: tls-placeholder   # not used if cert lives in App GW
  rules:
    - host: yourapp.contoso.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-svc
                port: { number: 80 }
